Fix an erroneous assertion.  Clean up some other code.  Bug 244929. r= jpierre, wtc.